<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/forget_pass_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_forget_pass" />

    <LinearLayout
        android:id="@+id/middle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forget_pass_textview"
        android:orientation="vertical">

        <TextView
            android:id="@+id/confirmation_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmation_message"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/perfil_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/email_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/perfil_image"
            android:text="@string/add_email" />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/continue_button"
            android:layout_below="@+id/email_textview" />

    </LinearLayout>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/middle_layout"
        android:layout_centerHorizontal="true"
        android:text="@string/button_continue" />
</RelativeLayout>
